# Multi-Document-RAG-system

./: .dockerignore  .gitignore  README.md  app.py  docker-compose.yaml  dockerfile.backend  dockerfile.frontend  main.py  pyproject.toml  render.yaml  requirement.txt  requirements.txt  test_pipeline.py
RAG/: RAG_pipeline.py  debug-LLM.PY  document_processor.py  llm.py  main.py  prompts.py  test_pipeline.py  vector_store.py
streamlit/: config.toml
